Created the pair table

--- a/slides.tex
+++ b/slides.tex
@@ -29,7 +29,7 @@
 
 \input{pat-slides}
 
-\title{Turán-Type Theorems for Triangles in Convex Point Sets}
+\title{Turán-Type Theorems for Triangles \newline in Convex Point Sets}
 \author{Pat Morin}
 \date{January 29, 2016}
 
