Some new figures

--- a/slides.tex
+++ b/slides.tex
@@ -286,7 +286,7 @@
       \item<2-> Within one round, points must be increasing
       \item<3-> Each point kills a {\raisebox{-.1ex}{\includegraphics[height=2.0ex]{slidefigs/shape}}}
  shape
-      \item<4-> $\Omega(n^{3/2})$ lower bound is easy:\\
+      \item<4-> $\Omega(n^{3/2})$ lower bound is easy (and looks tight):\\
       \begin{center}
         \only<1-4>{\includegraphics{slidefigs/n32-1}}%
         \only<5>{\includegraphics{slidefigs/n32-2}}%
@@ -299,6 +299,14 @@
       \item<11-> We have no upper bound better than $O(n^2)$
    \end{itemize}
 \end{frame}
+
+\begin{frame}
+   \frametitle{$\ex(n,\{\taco,\nested\})\in\omega(n^{3/2}$}
+   \begin{itemize}
+       \item Ignoring constant factors, we can assume a $n\times n$ board
+   \end{itemize}
+      \centerline{\mi{slidefigs/sqrtn}}%
+ \end{frame}
 
 \begin{frame}
    \frametitle{The End}
